修改jdk后门执行的方式，删除哥斯拉，哥斯拉兼容性太差。